Updated package path.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: firewolf8385.flameperms.FlamePerms
+main: me.firewolf8385.flameperms.FlamePerms
 name: FlamePerms
 version: 1.0
 description: Permission Plugin for 1.15.2
