Added 5th color (default red) to theme.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -44,6 +44,9 @@ Theme:
   # Default: "&f"
   color4: "&f"
 
+  # Default: "&c"
+  color5: "&c"
+
 # -----------------------------------------
 #               Settings
 # -----------------------------------------
